[gd_scene load_steps=39 format=3 uid="uid://crco2b1srkhyo"]

[ext_resource type="PackedScene" uid="uid://bxbkpou8fdoqo" path="res://game/actors/enemies/enemy.tscn" id="1_0mf37"]
[ext_resource type="BehaviorTree" uid="uid://m60n8oplxst6" path="res://game/actors/behavior/melee_behavior_tree.tres" id="2_kc48n"]
[ext_resource type="PackedScene" uid="uid://bqrjmk2kfp344" path="res://game/actors/enemies/melee_enemy/sk_melee_enemy_glb.tscn" id="2_x3bpp"]
[ext_resource type="Script" path="res://game/actors/enemies/melee_enemy/melee_enemy.gd" id="2_y6jdy"]
[ext_resource type="Script" path="res://game/actors/enemies/melee_enemy/enemy_melee_ability.gd" id="3_uffac"]
[ext_resource type="Script" path="res://common/components/templates/HitBoxComponent3D.gd" id="4_1xqfq"]
[ext_resource type="AudioStream" uid="uid://bakf0nerxl5g1" path="res://game/actors/enemies/sfx/aud_enemy_melee_attack_1.wav" id="7_6f8ad"]
[ext_resource type="AudioStream" uid="uid://b7ehg45c6pokp" path="res://game/actors/enemies/sfx/aud_enemy_melee_hurt_1.wav" id="7_ea4yp"]
[ext_resource type="AudioStream" uid="uid://c1cf52dnvwyt1" path="res://game/actors/enemies/sfx/aud_enemy_melee_attack_2.wav" id="8_t3wq0"]
[ext_resource type="AudioStream" uid="uid://c1tdfeg5be6eb" path="res://game/actors/enemies/sfx/aud_enemy_melee_hurt_2.wav" id="8_yyjup"]
[ext_resource type="AudioStream" uid="uid://hh1et0dc81wq" path="res://game/actors/enemies/sfx/aud_enemy_melee_hurt_3.wav" id="9_sc6j1"]
[ext_resource type="AudioStream" uid="uid://dhy02uhmicjsh" path="res://game/actors/enemies/sfx/aud_enemy_melee_attack_3.wav" id="9_tkytx"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_223sa"]
filter_enabled = true
filters = ["", "MeleeEnemyRig/Skeleton3D:f_index.01.L", "MeleeEnemyRig/Skeleton3D:f_index.01.R", "MeleeEnemyRig/Skeleton3D:forearm.L", "MeleeEnemyRig/Skeleton3D:forearm.R", "MeleeEnemyRig/Skeleton3D:hand.L", "MeleeEnemyRig/Skeleton3D:hand.R", "MeleeEnemyRig/Skeleton3D:shoulder.L", "MeleeEnemyRig/Skeleton3D:shoulder.R", "MeleeEnemyRig/Skeleton3D:spine.001", "MeleeEnemyRig/Skeleton3D:spine.002", "MeleeEnemyRig/Skeleton3D:spine.003", "MeleeEnemyRig/Skeleton3D:spine.004", "MeleeEnemyRig/Skeleton3D:spine.005", "MeleeEnemyRig/Skeleton3D:spine.006", "MeleeEnemyRig/Skeleton3D:spine.007", "MeleeEnemyRig/Skeleton3D:thumb.01.R", "MeleeEnemyRig/Skeleton3D:thumb.02.L", "MeleeEnemyRig/Skeleton3D:thumb.02.R", "MeleeEnemyRig/Skeleton3D:upper_arm.L", "MeleeEnemyRig/Skeleton3D:upper_arm.R"]
fadein_time = 0.2
fadeout_time = 0.2
break_loop_at_end = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f1fjm"]
animation = &"MeleeEnemyIdle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eg2vp"]
animation = &"MeleeEnemyRun"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ggdb5"]
animation = &"MeleeEnemyIdle"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_51sgs"]
blend_point_0/node = SubResource("AnimationNodeAnimation_f1fjm")
blend_point_0/pos = 0.5
blend_point_1/node = SubResource("AnimationNodeAnimation_eg2vp")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_ggdb5")
blend_point_2/pos = 0.0
min_space = 0.0

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_3dlvm"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kowxe"]
animation = &"MeleeEnemyRun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mxbkt"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ddet0"]
states/BlendSpace1D/node = SubResource("AnimationNodeBlendSpace1D_51sgs")
states/BlendSpace1D/position = Vector2(292, -112)
states/BlendTree/node = SubResource("AnimationNodeBlendTree_3dlvm")
states/BlendTree/position = Vector2(572, -87)
states/MeleeEnemyRun/node = SubResource("AnimationNodeAnimation_kowxe")
states/MeleeEnemyRun/position = Vector2(454, 75)
states/Start/position = Vector2(58, 54)
transitions = ["Start", "BlendSpace1D", SubResource("AnimationNodeStateMachineTransition_mxbkt")]
graph_offset = Vector2(-58, -187)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x4avn"]
animation = &"MeleeEnemySlash1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1pcod"]
animation = &"MeleeEnemySlash2"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_80vw5"]
advance_mode = 2
advance_expression = "melee_ability.attack_type == melee_ability.AttackType.SLASHRL"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yoeiw"]
advance_mode = 2
advance_expression = "melee_ability.attack_type == melee_ability.AttackType.SLASH_RL"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m5jme"]
advance_mode = 2
advance_expression = "melee_ability.attack_type == melee_ability.AttackType.SLASH_RL"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pt5a5"]
advance_mode = 2
advance_expression = "melee_ability.attack_type == melee_ability.AttackType.SLASH_RL"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_61nb2"]
states/MeleeEnemySlash1/node = SubResource("AnimationNodeAnimation_x4avn")
states/MeleeEnemySlash1/position = Vector2(191, -61)
states/MeleeEnemySlash2/node = SubResource("AnimationNodeAnimation_1pcod")
states/MeleeEnemySlash2/position = Vector2(545, 56)
states/Start/position = Vector2(102, 113)
transitions = ["Start", "MeleeEnemySlash1", SubResource("AnimationNodeStateMachineTransition_80vw5"), "Start", "MeleeEnemySlash2", SubResource("AnimationNodeStateMachineTransition_yoeiw"), "MeleeEnemySlash2", "MeleeEnemySlash1", SubResource("AnimationNodeStateMachineTransition_m5jme"), "MeleeEnemySlash1", "MeleeEnemySlash2", SubResource("AnimationNodeStateMachineTransition_pt5a5")]
graph_offset = Vector2(-51, -124)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_k80vy"]
nodes/attack/node = SubResource("AnimationNodeOneShot_223sa")
nodes/attack/position = Vector2(-320, 320)
nodes/bottom_state/node = SubResource("AnimationNodeStateMachine_ddet0")
nodes/bottom_state/position = Vector2(-840, 160)
nodes/output/position = Vector2(260, 260)
nodes/top_state/node = SubResource("AnimationNodeStateMachine_61nb2")
nodes/top_state/position = Vector2(-840, 560)
node_connections = [&"attack", 0, &"bottom_state", &"attack", 1, &"top_state"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_syuwp"]

[sub_resource type="BoxMesh" id="BoxMesh_uaspe"]

[sub_resource type="BoxShape3D" id="BoxShape3D_f8enx"]
size = Vector3(0.25, 0.25, 0.25)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mtyox"]
radius = 0.324182
height = 0.952889

[sub_resource type="BlackboardPlan" id="BlackboardPlan_shc20"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bn64c"]
albedo_color = Color(0, 0, 0, 0.478431)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ghcsd"]
radius = 0.2
height = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_uu1hf"]
random_pitch = 1.1
random_volume_offset_db = 3.0
streams_count = 3
stream_0/stream = ExtResource("7_6f8ad")
stream_1/stream = ExtResource("8_t3wq0")
stream_2/stream = ExtResource("9_tkytx")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vyfh6"]
random_pitch = 1.1
random_volume_offset_db = 3.0
streams_count = 3
stream_0/stream = ExtResource("7_ea4yp")
stream_1/stream = ExtResource("8_yyjup")
stream_2/stream = ExtResource("9_sc6j1")

[node name="MeleeEnemy" groups=["Enemy"] instance=ExtResource("1_0mf37")]
collision_layer = 8
collision_mask = 15
script = ExtResource("2_y6jdy")
speed = 5
max_health = 60.0
turning_speed = 2.0

[node name="AnimationTree" type="AnimationTree" parent="." index="0"]
active = false
root_node = NodePath("../Visual/sk_melee_enemy")
tree_root = SubResource("AnimationNodeBlendTree_k80vy")
anim_player = NodePath("../Visual/sk_melee_enemy/AnimationPlayer")
parameters/attack/active = false
parameters/attack/internal_active = false
parameters/attack/request = 0
parameters/bottom_state/BlendSpace1D/blend_position = 0.242682

[node name="Visual" type="Node3D" parent="." index="1"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Visual" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_syuwp")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Visual" index="1"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 1.4821, -0.378365)
visible = false
mesh = SubResource("BoxMesh_uaspe")
skeleton = NodePath("../..")

[node name="sk_melee_enemy" parent="Visual" index="2" instance=ExtResource("2_x3bpp")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="Visual/sk_melee_enemy/MeleeEnemyRig" index="0"]
bones/0/position = Vector3(2.58299e-09, 1.06587, -0.0913907)
bones/0/rotation = Quaternion(0.125841, 0, 0, 0.99205)
bones/0/scale = Vector3(1, 1, 1)
bones/1/rotation = Quaternion(-0.0647026, 2.37919e-07, -1.54263e-08, 0.997905)
bones/2/rotation = Quaternion(-0.0772799, -1.18853e-07, -2.76374e-08, 0.997009)
bones/3/rotation = Quaternion(0.238896, 1.15758e-07, 8.54358e-08, 0.971045)
bones/4/rotation = Quaternion(-0.116958, -7.13187e-14, -5.57699e-08, 0.993137)
bones/4/scale = Vector3(1, 1, 1)
bones/5/rotation = Quaternion(-0.280546, -1.14422e-07, -1.00331e-07, 0.959841)
bones/6/rotation = Quaternion(0.790648, -0.139742, 0.0911287, 0.589105)
bones/7/rotation = Quaternion(-0.684061, -5.37722e-13, -3.26186e-07, 0.729425)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(0.00357137, -2.38417e-07, 8.51471e-10, 0.999994)
bones/9/rotation = Quaternion(0.735619, 0.4204, 0.263833, -0.461)
bones/10/rotation = Quaternion(0.0871745, 0.701428, -0.0868205, 0.702041)
bones/11/rotation = Quaternion(0.806045, -0.0905712, -0.432239, 0.394028)
bones/12/rotation = Quaternion(-0.00117773, 0.0240741, 0.127613, 0.991531)
bones/12/scale = Vector3(1, 1, 1)
bones/13/rotation = Quaternion(0.144767, 0.664381, -0.133397, 0.721003)
bones/14/rotation = Quaternion(0.436156, 0.899749, 0.00423516, 0.0141928)
bones/14/scale = Vector3(1, 1, 1)
bones/15/rotation = Quaternion(0.00571174, -0.00186955, -0.197344, 0.980316)
bones/16/rotation = Quaternion(0.735619, -0.4204, -0.263832, -0.461001)
bones/17/rotation = Quaternion(0.129301, -0.694923, 0.128987, 0.695504)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(0.579244, 0.381671, 0.592368, 0.40976)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(-0.00117776, -0.0240741, -0.127613, 0.991531)
bones/19/scale = Vector3(1, 1, 1)
bones/20/rotation = Quaternion(0.285126, -0.624852, 0.240594, 0.685841)
bones/21/rotation = Quaternion(-0.436156, 0.899749, 0.00423517, -0.0141929)
bones/21/scale = Vector3(1, 1, 1)
bones/22/rotation = Quaternion(0.0115478, 0.00915344, 0.359876, 0.932884)
bones/22/scale = Vector3(1, 1, 1)
bones/23/rotation = Quaternion(0.0159288, -1.19194e-07, 1.89886e-09, 0.999873)
bones/23/scale = Vector3(1, 1, 1)
bones/24/rotation = Quaternion(0.0893422, -1.18733e-07, 1.06504e-08, 0.996001)
bones/25/rotation = Quaternion(0.972721, 0.0677785, -0.00400212, 0.221821)
bones/25/scale = Vector3(1, 1, 1)
bones/26/rotation = Quaternion(0.14879, -0.00105481, 0.0678884, 0.986535)
bones/26/scale = Vector3(1, 1, 1)
bones/27/rotation = Quaternion(-0.623808, 6.50159e-07, -6.71198e-07, 0.781577)
bones/28/rotation = Quaternion(-1.66106e-07, 0.993899, -0.110295, 3.39253e-06)
bones/30/rotation = Quaternion(0.972721, -0.0677785, 0.00400212, 0.221821)
bones/30/scale = Vector3(1, 1, 1)
bones/31/rotation = Quaternion(0.14879, 0.00105481, -0.0678884, 0.986535)
bones/31/scale = Vector3(1, 1, 1)
bones/32/rotation = Quaternion(-0.623808, -6.50159e-07, 6.71198e-07, 0.781577)
bones/33/rotation = Quaternion(1.66106e-07, 0.993899, -0.110295, -3.39253e-06)
bones/34/rotation = Quaternion(-0.697682, 0.697682, -0.115064, -0.115066)

[node name="Cube_017" parent="Visual/sk_melee_enemy/MeleeEnemyRig/Skeleton3D" index="0"]
transform = Transform3D(0.944336, -0.00290145, -0.328971, 1.27589e-07, 0.999961, -0.00881901, 0.328983, 0.00832835, 0.944299, 0.124728, 0.0681076, -0.291577)

[node name="Cube_013" parent="Visual/sk_melee_enemy/MeleeEnemyRig/Skeleton3D" index="1"]
transform = Transform3D(1, 7.10543e-15, 2.84217e-13, -1.68754e-14, 1, -8.9407e-08, -3.2685e-13, 8.9407e-08, 1, 1.55431e-15, 1.19209e-07, 6.14673e-08)

[node name="Cube_018" parent="Visual/sk_melee_enemy/MeleeEnemyRig/Skeleton3D" index="2"]
transform = Transform3D(1.03054, -3.55271e-14, -8.81073e-13, -1.03917e-13, 1.01942, -0.15101, 8.2423e-13, 0.15101, 1.01942, 1.9984e-15, 1.64392, -0.255609)

[node name="RightHandAttachment" type="BoneAttachment3D" parent="Visual/sk_melee_enemy/MeleeEnemyRig/Skeleton3D" index="6"]
transform = Transform3D(-0.997195, -0.0382908, 0.0643248, 0.0656873, -0.0354586, 0.99721, -0.035903, 0.998638, 0.0378746, -1.00404, 1.93003, 0.642841)
bone_name = "hand.R"
bone_idx = 19

[node name="RightHandHitbox" type="Area3D" parent="Visual/sk_melee_enemy/MeleeEnemyRig/Skeleton3D/RightHandAttachment" index="0" node_paths=PackedStringArray("sender")]
unique_name_in_owner = true
transform = Transform3D(2.6676, 0, 0, 0, 2.6676, 0, 0, 0, 2.6676, 0, 0, 0)
collision_layer = 0
collision_mask = 256
monitoring = false
script = ExtResource("4_1xqfq")
sender = NodePath("../../../../../..")
amount = 5.0
deactivate_on_hit = true
is_one_shot = true
active = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Visual/sk_melee_enemy/MeleeEnemyRig/Skeleton3D/RightHandAttachment/RightHandHitbox" index="0"]
shape = SubResource("BoxShape3D_f8enx")

[node name="LeftHandAttachment" type="BoneAttachment3D" parent="Visual/sk_melee_enemy/MeleeEnemyRig/Skeleton3D" index="7"]
transform = Transform3D(-0.70381, -0.270102, -0.657038, -0.675871, -0.0302085, 0.736401, -0.218751, 0.962358, -0.161292, 0.797765, 1.8088, 0.461742)
bone_name = "hand.L"
bone_idx = 12

[node name="LeftHandHitbox" type="Area3D" parent="Visual/sk_melee_enemy/MeleeEnemyRig/Skeleton3D/LeftHandAttachment" index="0" node_paths=PackedStringArray("sender")]
unique_name_in_owner = true
transform = Transform3D(2.6676, 0, 0, 0, 2.6676, 0, 0, 0, 2.6676, 0, 0, 0)
collision_layer = 0
collision_mask = 256
monitoring = false
script = ExtResource("4_1xqfq")
sender = NodePath("../../../../../..")
amount = 5.0
deactivate_on_hit = true
is_one_shot = true
active = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Visual/sk_melee_enemy/MeleeEnemyRig/Skeleton3D/LeftHandAttachment/LeftHandHitbox" index="0"]
shape = SubResource("BoxShape3D_f8enx")

[node name="AnimationPlayer" parent="Visual/sk_melee_enemy" index="1"]
autoplay = "MeleeEnemyIdle"

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="2" groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.474035, 0)
shape = SubResource("CapsuleShape3D_mtyox")

[node name="BTPlayer" type="BTPlayer" parent="." index="3"]
behavior_tree = ExtResource("2_kc48n")
blackboard_plan = SubResource("BlackboardPlan_shc20")
unique_name_in_owner = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="4"]
unique_name_in_owner = true
path_max_distance = 1.01

[node name="MeleeAbility" type="Node3D" parent="." index="5"]
unique_name_in_owner = true
script = ExtResource("3_uffac")
hitting_color = Color(1, 0, 0, 1)
default_color = Color(0, 0, 0, 0.478431)

[node name="Visual" type="CSGBox3D" parent="MeleeAbility" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.779865, -1.17424)
visible = false
material = SubResource("StandardMaterial3D_bn64c")

[node name="HealthComponent" parent="." index="6"]
max_health = 60.0
health = 60.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBoxComponent3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.501235, 0)
shape = SubResource("CapsuleShape3D_ghcsd")

[node name="enemy_sfx" parent="." index="10"]
attacks = SubResource("AudioStreamRandomizer_uu1hf")
hurts = SubResource("AudioStreamRandomizer_vyfh6")

[editable path="Visual/sk_melee_enemy"]
